--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,8 @@
-appnope==0.1.0
-backports.shutil-get-terminal-size==1.0.0
-click==6.7
-decorator==4.0.10
-enum34==1.1.6
-Flask==0.12.2
-ipython==5.1.0
-ipython-genutils==0.1.0
-itsdangerous==0.24
-Jinja2==2.9.6
-MarkupSafe==1.0
-pathlib2==2.1.0
-pexpect==4.2.1
-pickleshare==0.7.4
-prompt-toolkit==1.0.8
-ptyprocess==0.5.1
-Pygments==2.1.3
-requests==2.13.0
-simplegeneric==0.8.1
-six==1.10.0
-traitlets==4.3.1
-wcwidth==0.1.7
-Werkzeug==0.12.2
+Flask==0.10.1
+gitdb2==2.0.0
+GitPython==2.1.1
+PyGithub==1.25.1
+pyparsing==2.1.10
+requests==1.1.0
+urllib3==1.20
+Werkzeug==0.11.15
